changed two model

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Hi! How are you? Welcome to EJ</h1>
-    <a href="#">
+    <a href="/sessions/new">
       <button type="button" name="button">Sign In</button>
     </a>
     <a href="/users/new">
