--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -7,7 +7,7 @@
   <body>
     <div class="container">
       <h1>Sign Up</h1>
-      <form action="/users" method="POST">
+      <form action="/sessions" method="POST">
         <label for="name">User Name:</label>
         <input type="text" name="username" required/>
         <label for="color">Password:</label>
