--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -7,11 +7,13 @@
   <body>
     <div class="container">
       <h1>Sign Up</h1>
-      <form action="/sessions" method="POST">
+      <form action="/users" method="POST">
         <label for="name">User Name:</label>
         <input type="text" name="username" required/>
         <label for="color">Password:</label>
         <input type="password" name="password" />
+        <label for="color">Coins you want to buy:</label>
+        <input type="text" name="money" />
         <br>
         <input type="submit" value="Submit">
       <form>
