--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <ul class="right">
   <% if (user) { %>
-  <li>Welcome <%= user.username %></li>
-  <li>You have <%= user.money%> coins left</li>
+  <li>Welcome <%=user.username%></li>
+  <li>You have <%=money%> coins left</li>
   <li>
     <form action="/sessions?_method=DELETE" method="POST">
       <input type="submit" value="Log Out" class="btn-small red" />
