--- a/views/pokemon/edit.ejs
+++ b/views/pokemon/edit.ejs
@@ -14,7 +14,7 @@
         </select><br/>
       <label for="name">name</label>
       <input type="text" name="name" value = <%=pokemonShow.name%> id="name">
-      <label for="img">name</label>
+      <label for="img">image</label>
       <input type="text" name="img" value = <%=pokemonShow.img%> id="name">
       <label for="type">type</label>
       <input type="text" name="type" value = <%=pokemonShow.type[0]%> id="type">
