start working on css

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,6 +7,15 @@
       <input type="submit" value="Log Out" class="btn-small red" />
     </form>
   </li>
+  <li>
+  <a href="/logs">
+  <button type="button" name="button">Check My Pokemon</button></a>
+  </li>
+  <li>
+    <a href="/users/show">
+      <button type="button" name="button">Buy More Coins</button>
+    </a>
+  </li>
   <% } else { %>
   <li><a href="/users/new">Sign Up</a></li>
   <li><a href="/sessions/new">Log In</a></li>
