--- a/views/pokemon/show.ejs
+++ b/views/pokemon/show.ejs
@@ -21,7 +21,7 @@
     <p>Coins Needed:
       <%let coin = Math.floor(Math.random()* 1000) %>
       <%= coin %>
-      Coin left: <%= user.money = user.money - coin %>
+      Coin left: <%= money = money - coin %>
     </p>
     <a href="/pokemon"><button type="button" name="button">return to main page</button></a>
 
