finish sign in /up styling

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,16 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Welcome</title>
+    <link rel="stylesheet" href="/css/welcome.css">
+    <link href="https://fonts.googleapis.com/css?family=Trade+Winds&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hi! How are you? Welcome to EJ</h1>
-    <a href="/sessions/new">
-      <button type="button" name="button">Sign In</button>
-    </a>
-    <a href="/users/new">
-      <button type="button" name="button">Sign Up</button>
-    </a>
-
+    <div class="container">
+      <a href="/sessions/new">
+        <button  type="button" name="button">Sign In</button>
+      </a>
+      <a href="/users/new">
+        <button  type="button" name="button">Sign Up</button>
+      </a>
+    </div>
 
   </body>
 </html>
