--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Sign Up</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Sign In</title>
+  <link rel="stylesheet" href="/css/signin.css">
+    <link href="https://fonts.googleapis.com/css?family=Trade+Winds&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
   <body>
-    <div class="container">
-      <h1>Sign Up</h1>
+    <div class="bg-img">
+    </div>
+    <div class="container-form">
       <form action="/users" method="POST">
-        <label for="name">User Name:</label>
-        <input type="text" name="username" required/>
-        <label for="color">Password:</label>
-        <input type="password" name="password" />
-        <label for="color">Coins you want to buy:</label>
-        <input type="text" name="money" />
-        <br>
+      <div class="container-input">
+        <i class="fa fa-user icon"></i>
+        <input type="text" name="username" placeholder="User Name"required/>
+      </div>
+      <div class="container-input">
+        <i class="fa fa-key icon"></i>
+        <input type="password" name="password" placeholder="Password"/>
+      </div>
+      <div class="container-input">
+        <i class="fa fa-credit-card  icon"></i>
+        <input type="text" name="money" placeholder="How many coins you want to get?" />
+      </div>
+      <div class="submit">
         <input type="submit" value="Submit">
-      <form>
+      </div>
+
+      </form>
     </div>
   </body>
 </html>
