--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,73 @@
 *{
-
+  padding: none;
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Trade Winds' ;
 }
-h1{
+body{
+  background-image: radial-gradient(rgb(245, 245, 220),rgb(0, 139, 139));
+  background-color:
+  rgb(0, 139, 139);
+  background-repeat:repeat;
+  background-size: cover;
+  height: 650px;
+}
+.dropdown{
+  position: relative;
+  display: inline-block;
   color: DarkRed;
+  margin-left: 10px;
+  text-shadow: 1px 1px Gold;
+}
+.dropdown-content {
 
+  display: none;
+  position: absolute;
+  background-color: Gold;
+  min-width: 150px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 10px 5px;
+  z-index: 1;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown:hover{
+  color: Gold;
+  text-shadow: 1px 1px DarkRed;
+}
+.dropdown a:hover{
+  display: block;
+  color: Gold;
+  background-color: DarkRed;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+.head-bar{
+  display: flex;
+  justify-content: space-around;
+
+}
+.right{
+  margin-top: 20px;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+}
+li{
+  margin: 0 10px;
+  color: DarkRed;
+  text-shadow: 1px 1px Gold;
+
+}
+li:hover{
+  color: Gold;
+  text-shadow: 1px 1px DarkRed;
+}
+
+h1{
+  color: Gold;
+  font-size: 50px;
+  text-shadow: 3px 3px DarkRed;
 }
 
 header{
@@ -16,7 +78,7 @@ header{
 }
 .flex-container{
   /* border: 0.1em solid red; */
-  background-color: silver;
+
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -24,8 +86,10 @@ header{
 
 }
 .row{
-  color: white;
-  background-color: DarkRed;
+  border-radius: 20px;
+  box-shadow: 5px 10px 18px #888888;
+  color: DarkRed;
+  background-color: white;
   text-align:center;
   /* border: 0.1em solid red; */
   padding: 20px 0;
@@ -36,7 +100,10 @@ header{
   justify-content: space-around;
 }
 
+
 a{
+  color: DarkRed;
+  text-decoration: none;
   text-align: center;
   display:inline-block;
 
@@ -54,8 +121,9 @@ img{
   height: 100%;
 
 }
-input, button{
 
-  font-family: sans-serif;
-  background-color: DarkCyan;
+input, button{
+  box-shadow: 5px 10px 18px #888888;
+  color: Gold;
+  background-color: DarkRed;
 }
