finish style show page

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,6 +4,7 @@
   <li> Coins: <%=money%></li>
   <div class="dropdown">
     <span>More</span>
+    <!-- <i class="fa fa-bars"></i> -->
     <div class="dropdown-content">
       <li>
       <a href="/logs">
