--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,8 +10,9 @@ body{
   rgb(0, 139, 139);
   background-repeat:repeat;
   background-size: cover;
-  height: 650px;
+  height: 750px;
 }
+/* Nav */
 .dropdown{
   position: relative;
   display: inline-block;
@@ -53,13 +54,13 @@ body{
   display: flex;
   justify-content: space-around;
 }
-li{
+.right>li{
   margin: 0 10px;
   color: DarkRed;
   text-shadow: 1px 1px Gold;
 
 }
-li:hover{
+.right>li:hover{
   color: Gold;
   text-shadow: 1px 1px DarkRed;
 }
@@ -72,10 +73,32 @@ h1{
 
 header{
 
-  font-family: sans-serif;
   margin: 30px auto;
   text-align: center;
 }
+.right a{
+  color: DarkRed;
+  text-decoration: none;
+  text-align: center;
+  display:inline-block;
+
+}
+.right>form{
+  /* border: 0.1em solid red; */
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+
+}
+input, button{
+  box-shadow: 5px 10px 18px #888888;
+  color: Gold;
+  background-color: DarkRed;
+
+}
+
+/* nav finish */
+/* index */
 .flex-container{
   /* border: 0.1em solid red; */
 
@@ -83,7 +106,6 @@ header{
   flex-wrap: wrap;
   justify-content: space-around;
   margin: 50px;
-
 }
 .row{
   border-radius: 20px;
@@ -100,30 +122,50 @@ header{
   justify-content: space-around;
 }
 
-
-a{
-  color: DarkRed;
-  text-decoration: none;
-  text-align: center;
-  display:inline-block;
-
-}
-form{
-
-  /* border: 0.1em solid red; */
-  display: flex;
-  justify-content: space-around;
-  margin-top: 20px;
-}
-img{
+.index-img{
   margin: 10px auto;
   width: 40%;
   height: 100%;
 
 }
-
-input, button{
-  box-shadow: 5px 10px 18px #888888;
-  color: Gold;
-  background-color: DarkRed;
+/* index finish  */
+/* show  */
+.container-display{
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
 }
+.footer{
+  margin-top: 100px;
+  text-align: center;
+}
+.display-img img{
+  width: 300px;
+  height: 300px;
+  margin: 20px 0px;
+  border: 0.5em solid gold;
+  box-shadow: 5px 10px 18px #888888;
+}
+.display-info{
+  padding: 10px;
+  width: 300px;
+  height: 300px;
+  margin: 20px 0px;
+  border: 0.5em solid DarkRed;
+  box-shadow: 5px 10px 18px #888888;
+}
+h2{
+  color: DarkRed;
+}
+h4{
+  color: DarkRed;
+  margin: 5px auto;
+}
+
+#name{
+  font-size: 30px;
+  color: DarkRed;
+  margin-bottom: 10px;
+}
+
+/* show finish  */
