--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,8 @@
 <head>
   <meta charset="utf-8">
   <title>pokemon shop</title>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Trade+Winds&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
