--- a/views/pokemon/index.ejs
+++ b/views/pokemon/index.ejs
@@ -10,15 +10,12 @@
 
        <!-- partials finish  -->
       </div>
-
     </header>
     <div class="flex-container">
     <%for(let i = 0; i < pokemonIndex.length; i++){%>
       <div class="row">
         <p><%=pokemonIndex[i].name%></p>
-
-
-        <a href="/pokemon/<%=i%>"><img src="<%=pokemonIndex[i].img%>" alt=""></a>
+        <a href="/pokemon/<%=i%>"><img class="index-img" src="<%=pokemonIndex[i].img%>" alt=""></a>
 
         </div>
     <%}%>
