index page show page complete

--- a/views/pokemon/edit.ejs
+++ b/views/pokemon/edit.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>edit pokemon</title>
-  </head>
-  <!-- onload='document.form.submit()' -->
-  <body >
+<head>
+  <meta charset="utf-8">
+  <title>upgrade pokemon</title>
+</head>
+
+  <body onload='document.form.submit()'>
+
+
+
     <form class="" action="/logs" method="post" name='form'>
       <select name="userId">
         <option value='<%=user._id%>'>
