--- a/public/css/main.css
+++ b/public/css/main.css
@@ -76,7 +76,7 @@ header{
   margin: 30px auto;
   text-align: center;
 }
-.right a{
+a{
   color: DarkRed;
   text-decoration: none;
   text-align: center;
@@ -122,7 +122,7 @@ input, button{
   justify-content: space-around;
 }
 
-.index-img{
+.index-img, .log-img{
   margin: 10px auto;
   width: 40%;
   height: 100%;
@@ -167,5 +167,18 @@ h4{
   color: DarkRed;
   margin-bottom: 10px;
 }
-
+.footer button{
+  display: block;
+  height: 50px;
+  width: 150px;
+  font-size: 15px;
+  margin: 10px auto;
+}
 /* show finish  */
+/* *********POKEMON END********* */
+/* *********LOG ROUTE********* */
+/* index */
+.log-img{
+  padding: 20px 0px;
+  width: 50%;
+}
