--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -11,6 +11,10 @@
       My Pokemon</a>
       </li>
       <li>
+      <a href="/pokemon">
+      Pokemon Shop</a>
+      </li>
+      <li>
         <a href="/users/show">
           Buy Coins
         </a>
