--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -10,9 +10,10 @@ body{
   background-position: center;
   background-size: cover;
   background-repeat: space;
-  height: 650px;
+  height: 600px;
 }
 button{
+  margin: 20px 10px;
   background-color: rgba(255, 0, 0, 0.8);
   color: rgb(255, 210, 77);
   width: 250px;
